// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParcelDetailForm ParcelDetailForm renders view-only correctly 1`] = `
<div
  className="parcelDetailForm row no-gutters"
>
  <div
    className="col"
  >
    <form
      className=""
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <h3>
            Address
          </h3>
          <div
            className="pidPinForm form-row"
          >
            <div
              className="pidPinForm col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  PID 
                  <svg
                    className="tooltip-icon"
                    fill="currentColor"
                    height={14}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    size={14}
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width={14}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                    />
                  </svg>
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-pid"
                    name="pid"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value="000-000-000"
                  />
                </div>
              </div>
              <p
                style={
                  Object {
                    "height": "2.75rem",
                    "textAlign": "center",
                  }
                }
              >
                OR
              </p>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  PIN 
                  <svg
                    className="tooltip-icon"
                    fill="currentColor"
                    height={14}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    size={14}
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width={14}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                    />
                  </svg>
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-pin"
                    name="pin"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  RAEG or SPP
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-projectNumber"
                    name="projectNumber"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="addressForm col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Street Address
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-address.line1"
                    name="address.line1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value="1234 mock Street"
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  City
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <select
                    className="form-control"
                    disabled={true}
                    id="input-address.cityId"
                    name="address.cityId"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value=""
                    >
                      Must Select One
                    </option>
                    <option
                      value="1"
                    >
                      test city
                    </option>
                  </select>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Province
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <select
                    className="form-control"
                    disabled={true}
                    id="input-address.provinceId"
                    name="address.provinceId"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value=""
                    >
                      Must Select One
                    </option>
                    <option
                      value="2222"
                    >
                      test province
                    </option>
                  </select>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Postal
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-address.postal"
                    name="address.postal"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value="V1V1V1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="sumFinancialsForm form-row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Assessed Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-Assessed"
                        name="Assessed"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={10000}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Appraised Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-Appraised"
                        name="Appraised"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={0}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  NetBook Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-NetBook"
                        name="NetBook"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={10000}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Estimated Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-Estimated"
                        name="Estimated"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={0}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <h3>
            Land
          </h3>
          <div
            className="landForm form-row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Municipality
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-municipality"
                    name="municipality"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Zoning
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-zoning"
                    name="zoning"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Zoning Potential
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-zoningPotential"
                    name="zoningPotential"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Latitude
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-latitude"
                    name="latitude"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="number"
                    value={48}
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Longitude
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-longitude"
                    name="longitude"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="number"
                    value={123}
                  />
                </div>
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Active 
                  <svg
                    className="tooltip-icon"
                    fill="currentColor"
                    height={14}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    size={14}
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width={14}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                    />
                  </svg>
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <div
                    className="form-check"
                  >
                    <input
                      className="form-check-input position-static"
                      disabled={true}
                      id="input-statusId"
                      name="statusId"
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Classification
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <select
                    className="form-control"
                    disabled={true}
                    id="input-classificationId"
                    name="classificationId"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value=""
                    >
                      Must Select One
                    </option>
                    <option
                      value="1"
                    >
                      classification test
                    </option>
                  </select>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Lot Size
                </label>
                <div
                  className="input-group col-md-7 disabled"
                >
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-landArea"
                        name="landArea"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="number"
                        value="unknown"
                      />
                    </div>
                  </div>
                  <div
                    className="input-group-append"
                  >
                    <span
                      className="input-group-text"
                    >
                      Acres
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Sensitive Land
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <div
                    className="form-check"
                  >
                    <input
                      className="form-check-input position-static"
                      defaultChecked={false}
                      disabled={true}
                      id="input-isSensitive"
                      name="isSensitive"
                      onChange={[Function]}
                      type="checkbox"
                      value={false}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h4>
            Valuation Information
          </h4>
          <div
            className="evaluationForm form-row"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="col-md-3"
              >
                <h6>
                  Assessed
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Year
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2020"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.0.value"
                                name="financials.0.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value={10000}
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2019"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.4.value"
                                name="financials.4.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                className="col-md-3"
              >
                <h6>
                  Appraised
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Date
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <div
                          className="form-group"
                        >
                          <span
                            className=""
                          />
                          <div
                            className="react-datepicker-wrapper"
                          >
                            <div
                              className="react-datepicker__input-container"
                            >
                              <input
                                autoComplete="off"
                                className="form-control date-picker"
                                disabled={true}
                                name="financials.1.date"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="--/--/----"
                                readOnly={false}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.1.value"
                                name="financials.1.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div
                          className="form-group"
                        >
                          <span
                            className=""
                          />
                          <div
                            className="react-datepicker-wrapper"
                          >
                            <div
                              className="react-datepicker__input-container"
                            >
                              <input
                                autoComplete="off"
                                className="form-control date-picker"
                                disabled={true}
                                name="financials.5.date"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="--/--/----"
                                readOnly={false}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.5.value"
                                name="financials.5.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                className="col-md-3"
              >
                <h6>
                  NetBook
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Fiscal Year
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2019/2020"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.2.value"
                                name="financials.2.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value={10000}
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2018/2019"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.6.value"
                                name="financials.6.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                className="col-md-3"
              >
                <h6>
                  Estimated
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Fiscal Year
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2019/2020"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.3.value"
                                name="financials.3.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2018/2019"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group disabled"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                disabled={true}
                                id="input-financials.7.value"
                                name="financials.7.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            className="pagination"
          >
            <li
              className="page-item disabled"
            >
              <a
                aria-disabled="true"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                Previous
              </a>
            </li>
            <li
              className="page-item active"
            >
              <a
                aria-current="page"
                aria-label="Page 1 is your current page"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                1
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 2"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                2
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 3"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                3
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 4"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                4
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                ...
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 8"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                8
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 9"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                9
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 10"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                10
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-disabled="false"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                Next
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <h3>
            Buildings
          </h3>
          <div />
        </div>
      </div>
      <div
        style={
          Object {
            "textAlign": "right",
          }
        }
      />
    </form>
  </div>
</div>
`;

exports[`ParcelDetailForm field validation ParcelDetailForm renders correctly 1`] = `
<div
  className="parcelDetailForm row no-gutters"
>
  <div
    className="col"
  >
    <form
      className=""
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <h3>
            Address
          </h3>
          <div
            className="pidPinForm form-row"
          >
            <div
              className="pidPinForm col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  PID 
                  <svg
                    className="tooltip-icon"
                    fill="currentColor"
                    height={14}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    size={14}
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width={14}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                    />
                  </svg>
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-pid"
                    name="pid"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value="000-000-000"
                  />
                </div>
              </div>
              <p
                style={
                  Object {
                    "height": "2.75rem",
                    "textAlign": "center",
                  }
                }
              >
                OR
              </p>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  PIN 
                  <svg
                    className="tooltip-icon"
                    fill="currentColor"
                    height={14}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    size={14}
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width={14}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                    />
                  </svg>
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-pin"
                    name="pin"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  RAEG or SPP
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    disabled={true}
                    id="input-projectNumber"
                    name="projectNumber"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="addressForm col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Street Address
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-address.line1"
                    name="address.line1"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value="1234 mock Street"
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  City
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <select
                    className="form-control"
                    id="input-address.cityId"
                    name="address.cityId"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value=""
                    >
                      Must Select One
                    </option>
                    <option
                      value="1"
                    >
                      test city
                    </option>
                  </select>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Province
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <select
                    className="form-control"
                    disabled={true}
                    id="input-address.provinceId"
                    name="address.provinceId"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value=""
                    >
                      Must Select One
                    </option>
                    <option
                      value="2222"
                    >
                      test province
                    </option>
                  </select>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Postal
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-address.postal"
                    name="address.postal"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value="V1V1V1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="sumFinancialsForm form-row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Assessed Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-Assessed"
                        name="Assessed"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={10000}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Appraised Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-Appraised"
                        name="Appraised"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={0}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  NetBook Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-NetBook"
                        name="NetBook"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={10000}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Estimated Sum
                </label>
                <div
                  className="input-group col-md-10 disabled"
                >
                  <div
                    className="input-group-prepend"
                  >
                    <span
                      className="input-group-text"
                    >
                      $
                    </span>
                  </div>
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        disabled={true}
                        id="input-Estimated"
                        name="Estimated"
                        onBlur={[Function]}
                        onChange={[Function]}
                        value={0}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <h3>
            Land
          </h3>
          <div
            className="landForm form-row"
          >
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Municipality
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-municipality"
                    name="municipality"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Zoning
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-zoning"
                    name="zoning"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Zoning Potential
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-zoningPotential"
                    name="zoningPotential"
                    onBlur={[Function]}
                    onChange={[Function]}
                    value=""
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Latitude
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-latitude"
                    name="latitude"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="number"
                    value={48}
                  />
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Longitude
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <input
                    className="form-control"
                    id="input-longitude"
                    name="longitude"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="number"
                    value={123}
                  />
                </div>
              </div>
            </div>
            <div
              className="col-md-6"
            >
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Active 
                  <svg
                    className="tooltip-icon"
                    fill="currentColor"
                    height={14}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    size={14}
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width={14}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                    />
                  </svg>
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <div
                    className="form-check"
                  >
                    <input
                      className="form-check-input position-static"
                      disabled={false}
                      id="input-statusId"
                      name="statusId"
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Classification
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <select
                    className="form-control"
                    id="input-classificationId"
                    name="classificationId"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value=""
                    >
                      Must Select One
                    </option>
                    <option
                      value="1"
                    >
                      classification test
                    </option>
                  </select>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Lot Size
                </label>
                <div
                  className="input-group col-md-7"
                >
                  <div
                    className="input-group-content"
                  >
                    <div
                      className="form-group"
                    >
                      <input
                        className="form-control"
                        id="input-landArea"
                        name="landArea"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="number"
                        value="unknown"
                      />
                    </div>
                  </div>
                  <div
                    className="input-group-append"
                  >
                    <span
                      className="input-group-text"
                    >
                      Acres
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="form-row"
              >
                <label
                  className="form-label col-form-label col-md-2"
                >
                  Sensitive Land
                </label>
                <div
                  className="col-md-10 form-group"
                >
                  <div
                    className="form-check"
                  >
                    <input
                      className="form-check-input position-static"
                      defaultChecked={false}
                      disabled={false}
                      id="input-isSensitive"
                      name="isSensitive"
                      onChange={[Function]}
                      type="checkbox"
                      value={false}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h4>
            Valuation Information
          </h4>
          <div
            className="evaluationForm form-row"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="col-md-3"
              >
                <h6>
                  Assessed
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Year
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2020"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.0.value"
                                name="financials.0.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value={10000}
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2019"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.4.value"
                                name="financials.4.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                className="col-md-3"
              >
                <h6>
                  Appraised
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Date
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <div
                          className="form-group"
                        >
                          <span
                            className=""
                          />
                          <div
                            className="react-datepicker-wrapper"
                          >
                            <div
                              className="react-datepicker__input-container"
                            >
                              <input
                                autoComplete="off"
                                className="form-control date-picker"
                                disabled={false}
                                name="financials.1.date"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="--/--/----"
                                readOnly={false}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.1.value"
                                name="financials.1.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <div
                          className="form-group"
                        >
                          <span
                            className=""
                          />
                          <div
                            className="react-datepicker-wrapper"
                          >
                            <div
                              className="react-datepicker__input-container"
                            >
                              <input
                                autoComplete="off"
                                className="form-control date-picker"
                                disabled={false}
                                name="financials.5.date"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="--/--/----"
                                readOnly={false}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.5.value"
                                name="financials.5.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                className="col-md-3"
              >
                <h6>
                  NetBook
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Fiscal Year
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2019/2020"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.2.value"
                                name="financials.2.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value={10000}
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2018/2019"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.6.value"
                                name="financials.6.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                className="col-md-3"
              >
                <h6>
                  Estimated
                </h6>
                <table
                  className="table table-bordered"
                >
                  <thead>
                    <tr>
                      <td>
                        Fiscal Year
                      </td>
                      <td>
                        Value
                      </td>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2019/2020"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.3.value"
                                name="financials.3.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <input
                          className="form-control"
                          disabled={true}
                          readOnly={true}
                          type="string"
                          value="2018/2019"
                        />
                      </td>
                      <td>
                        <div
                          className="input-group"
                        >
                          <div
                            className="input-group-prepend"
                          >
                            <span
                              className="input-group-text"
                            >
                              $
                            </span>
                          </div>
                          <div
                            className="input-group-content"
                          >
                            <div
                              className="form-group"
                            >
                              <input
                                className="form-control"
                                id="input-financials.7.value"
                                name="financials.7.value"
                                onBlur={[Function]}
                                onChange={[Function]}
                                type="number"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            className="pagination"
          >
            <li
              className="page-item disabled"
            >
              <a
                aria-disabled="true"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                Previous
              </a>
            </li>
            <li
              className="page-item active"
            >
              <a
                aria-current="page"
                aria-label="Page 1 is your current page"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                1
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 2"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                2
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 3"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                3
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 4"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                4
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                ...
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 8"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                8
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 9"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                9
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-current={null}
                aria-label="Page 10"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                10
              </a>
            </li>
            <li
              className="page-item"
            >
              <a
                aria-disabled="false"
                className="page-link"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                Next
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <h3>
            Buildings
          </h3>
          <div>
            <button
              className="addBuilding btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Add Building
            </button>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        <button
          className="btn btn-primary"
          disabled={false}
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
